--- a/src/app/usit/components/Immigration/future-opt-cpt/future-opt-cpt.component.html
+++ b/src/app/usit/components/Immigration/future-opt-cpt/future-opt-cpt.component.html
@@ -24,7 +24,7 @@
 
                 <!-- SNo Column -->
                 <ng-container matColumnDef="SerialNum">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by SerialNum"> # </th>
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by SerialNum"> S.No    </th>
                     <td mat-cell *matCellDef="let element"> {{element?.serialNum}} </td>
                 </ng-container>
 
@@ -78,7 +78,7 @@
                 <!-- Current Location Column-->
                 <ng-container matColumnDef="CurrentLocation">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by CurrentLocation"> Current Location </th>
-                    <td mat-cell *matCellDef="let element"> {{element?.currentlocation}}
+                    <td mat-cell *matCellDef="let element"> {{element?.currentlocation.replace(', USA', '')}}
                     </td>
                 </ng-container>
 
