--- a/src/app/usit/components/Immigration/h1b-immigration/h1b-immigration.component.html
+++ b/src/app/usit/components/Immigration/h1b-immigration/h1b-immigration.component.html
@@ -28,7 +28,7 @@
 
                 <!-- SNo Column -->
                 <ng-container matColumnDef="SerialNum">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Serial Number"> # </th>
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Serial Number"> S.No </th>
                     <td mat-cell *matCellDef="let element"> {{element?.serialNum}} </td>
                 </ng-container>
 
