--- a/src/app/usit/components/masters/companies-list/companies-list.component.html
+++ b/src/app/usit/components/masters/companies-list/companies-list.component.html
@@ -29,7 +29,7 @@
 
         <!-- Serial Number Column -->
         <ng-container matColumnDef="SerialNum">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by SerialNum"> # </th>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by SerialNum"> S.No </th>
           <td mat-cell *matCellDef="let element"> {{ element.serialNum }} </td>
         </ng-container>
 
