--- a/src/app/usit/components/recruitment/requirement-list/requirement-list.component.html
+++ b/src/app/usit/components/recruitment/requirement-list/requirement-list.component.html
@@ -42,7 +42,7 @@
             *matHeaderCellDef
             sortActionDescription="Sort by Serial Number"
           >
-            #
+            S.No
           </th>
           <td mat-cell *matCellDef="let element">{{ element?.serialNum }}</td>
         </ng-container>
@@ -90,7 +90,7 @@
           >
             Location
           </th>
-          <td mat-cell *matCellDef="let element">{{ element?.location }}</td>
+          <td mat-cell *matCellDef="let element">{{ element?.location.replace(', USA', '') }}</td>
         </ng-container>
         <!-- Email-->
         <ng-container matColumnDef="IPVendor">
