--- a/src/app/usit/components/sales/closure-list/closure-list.component.html
+++ b/src/app/usit/components/sales/closure-list/closure-list.component.html
@@ -23,7 +23,7 @@
     
                 <!-- SNo Column -->
                 <ng-container matColumnDef="SerialNum">
-                    <th mat-header-cell *matHeaderCellDef> # </th>
+                    <th mat-header-cell *matHeaderCellDef> S.No </th>
                     <td mat-cell *matCellDef="let element"> {{element?.serialNum}} </td>
                 </ng-container>
     
