--- a/src/app/usit/components/sales/consultant-list/consultant-list.component.html
+++ b/src/app/usit/components/sales/consultant-list/consultant-list.component.html
@@ -34,8 +34,8 @@
 
         <!-- SNo Column  mat-sort-header-->
         <ng-container matColumnDef="SerialNum">
-          <th mat-header-cell *matHeaderCellDef
-            sortActionDescription="Sort by Serial Number"> # </th>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header
+            sortActionDescription="Sort by Serial Number"> S.No </th>
           <td mat-cell *matCellDef="let element"> {{element?.serialNum}} </td>
         </ng-container>
         <!-- Date-->
@@ -45,16 +45,15 @@
           <td mat-cell *matCellDef="let element"> {{element?.createddate | date:'yyyy-MM-dd'}} </td>
         </ng-container>
         <!-- ID-->
-        <ng-container matColumnDef="Id">
-          <th mat-header-cell *matHeaderCellDef 
+        <!-- <ng-container matColumnDef="Id">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header
             sortActionDescription="Sort by ID"> ID </th>
           <td mat-cell *matCellDef="let element">
-            <!-- {{element?.consultantno}} -->
             <span class="consultant-id"
               (click)="goToConsultantInfo(element, flag)">{{element?.consultantno}}
             </span>
           </td>
-        </ng-container>
+        </ng-container> -->
         <!-- Name-->
         <ng-container matColumnDef="Name">
           <th mat-header-cell *matHeaderCellDef 
@@ -100,11 +99,11 @@
             </td>
           </ng-container>
           <!-- Current Location -->
-          <ng-container matColumnDef="CurrentLocation">
-            <th mat-header-cell *matHeaderCellDef 
+          <ng-container matColumnDef="CurrentLocation"> 
+            <th mat-header-cell *matHeaderCellDef mat-sort-header
               sortActionDescription="Sort by Current Location">Current
               Location </th>
-            <td mat-cell *matCellDef="let element"> {{element?.currentlocation}}
+            <td mat-cell *matCellDef="let element"> {{element?.currentlocation.replace(', USA', '')}}
             </td>
           </ng-container>
           <!-- Company Column -->
