--- a/src/app/usit/components/sales/h1transfer/h1transfer.component.html
+++ b/src/app/usit/components/sales/h1transfer/h1transfer.component.html
@@ -24,7 +24,7 @@
                 <!-- SNo Column -->
                 <ng-container matColumnDef="SerialNum">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Serial Number">
-                        # </th>
+                        S.No </th>
                     <td mat-cell *matCellDef="let element"> {{element?.serialNum}} </td>
                 </ng-container>
 
@@ -77,7 +77,7 @@
                     <th mat-header-cell *matHeaderCellDef mat-sort-header
                         sortActionDescription="Sort by CurrentLocation">
                         Current Location </th>
-                    <td mat-cell *matCellDef="let element"> {{element?.currentlocation}}
+                    <td mat-cell *matCellDef="let element"> {{element?.currentlocation.replace(', USA', '')}}
                     </td>
                 </ng-container>
 
