--- a/src/app/usit/components/sales/submission-list/submission-list.component.html
+++ b/src/app/usit/components/sales/submission-list/submission-list.component.html
@@ -32,8 +32,8 @@
 
                 <!-- SNo Column mat-sort-header-->
                 <ng-container matColumnDef="SerialNum">
-                    <th mat-header-cell *matHeaderCellDef  sortActionDescription="Sort by Serial Number">
-                        # </th>
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Serial Number">
+                        S.No </th>
                     <td mat-cell *matCellDef="let element"> {{element?.serialNum}} </td>
                 </ng-container>
                 <!-- Date-->
