--- a/src/app/usit/components/tech-support-list/tech-support-list.component.html
+++ b/src/app/usit/components/tech-support-list/tech-support-list.component.html
@@ -28,7 +28,7 @@
   
           <!-- serial Number Column mat-sort-header-->
           <ng-container matColumnDef="SerialNum">
-            <th mat-header-cell *matHeaderCellDef  sortActionDescription="Sort by Serial Number"> # </th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Serial Number"> S.No </th>
             <td mat-cell *matCellDef="let element"> {{element?.serialNum}} </td>
           </ng-container>
   
