--- a/src/app/usit/components/technology-tag-list/technology-tag-list.component.html
+++ b/src/app/usit/components/technology-tag-list/technology-tag-list.component.html
@@ -27,7 +27,7 @@
               The actual rendered columns are set as a property on the row definition" -->
         <!-- Serial Number Column mat-sort-header-->
         <ng-container matColumnDef="SerialNum">
-          <th mat-header-cell *matHeaderCellDef  sortActionDescription="Sort by SerialNum"> # </th>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by SerialNum"> S.No </th>
           <td mat-cell *matCellDef="let element"> {{ element.serialNum }} </td>
         </ng-container>
 
