--- a/src/app/usit/components/vendor-management/recruiter-list/recruiter-list.component.html
+++ b/src/app/usit/components/vendor-management/recruiter-list/recruiter-list.component.html
@@ -34,8 +34,8 @@
     <section class="recruiter-table-style">
       <table mat-table [dataSource]="dataSource" matSort (matSortChange)="onSort($event)" oncopy="return false"
       onpaste="return false" oncut="return false">
-        <ng-container matColumnDef="SerialNum"><!-- mat-sort-header -->
-          <th mat-header-cell *matHeaderCellDef >#</th>
+        <ng-container matColumnDef="SerialNum">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>S.No</th>
           <td mat-cell *matCellDef="let recruiter">{{ recruiter?.serialNum }}</td>
         </ng-container>
 
