--- a/src/app/usit/components/vendor-management/vendor-list/vendor-list.component.html
+++ b/src/app/usit/components/vendor-management/vendor-list/vendor-list.component.html
@@ -39,7 +39,7 @@
 
         <!-- ID Column mat-sort-header sortActionDescription="Sort by Serial Number"-->
         <ng-container matColumnDef="SerialNum">
-          <th mat-header-cell *matHeaderCellDef > S No </th>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Serial Number"> S.No </th>
           <td mat-cell *matCellDef="let element"> {{element?.serialNum}} </td>
         </ng-container>
 
