--- a/src/app/usit/components/linkedprofiles/linkedprofiles.component.html
+++ b/src/app/usit/components/linkedprofiles/linkedprofiles.component.html
@@ -35,7 +35,7 @@
                     <td mat-cell *matCellDef="let element">
                         
                         <span class="consultant-name">
-                            <a href="{{element?.profile_url}}" target="_blank" (click)="lockProfile(element.id)">{{element?.candidate_name}} </a>
+                            <a href="{{element?.profile_url}}" target="_blank" >{{element?.candidate_name}} </a>
                         </span>
                     
                     </td>
