--- a/src/app/usit/components/vendor-management/vendor-list/vendor-list.component.html
+++ b/src/app/usit/components/vendor-management/vendor-list/vendor-list.component.html
@@ -39,23 +39,23 @@
 
         <!-- ID Column mat-sort-header sortActionDescription="Sort by Serial Number"-->
         <ng-container matColumnDef="SerialNum">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Serial Number"> S.No </th>
-          <td mat-cell *matCellDef="let element"> {{element?.serialNum}} </td>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Serial Number" style="width: 2%"> S.No </th>
+          <td mat-cell *matCellDef="let element" style="width: 2%"> {{element?.serialNum}} </td>
         </ng-container>
 
         <!-- Company Column mat-sort-header sortActionDescription="Sort by Company"-->
         <ng-container matColumnDef="Company">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header > Company</th>
-          <td mat-cell *matCellDef="let element">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header style="width: 16%"> Company</th>
+          <td mat-cell *matCellDef="let element" style="width: 16%">
             <span class="company-recruiter-info" (click)="goToCompanyRecInfo(element)"> {{element.company}}</span>
           </td>
         </ng-container>
 
         <!-- HeadQuarter Column mat-sort-header sortActionDescription="Sort by Head Quarter"-->
         <ng-container matColumnDef="HeadQuarter">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by headquerter" > Head
+          <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by headquerter" style="width: 16%"> Head
             Quarter </th>
-          <td mat-cell *matCellDef="let element"> {{element.headquerter}} </td>
+          <td mat-cell *matCellDef="let element" style="width: 16%"> {{element.headquerter}} </td>
         </ng-container>
 
         <!-- Fed-Id Column -->
@@ -73,30 +73,30 @@
 
         <!-- TierType Column -->
         <ng-container matColumnDef="TierType">
-          <th mat-header-cell *matHeaderCellDef  mat-sort-header sortActionDescription="Sort by tyretype"> Tier Type
+          <th mat-header-cell *matHeaderCellDef  mat-sort-header sortActionDescription="Sort by tyretype" style="width: 10%"> Tier Type
           </th>
-          <td mat-cell *matCellDef="let element" > {{element.tyretype}} </td>
+          <td mat-cell *matCellDef="let element" style="width: 10%"> {{element.tyretype}} </td>
         </ng-container>
 
         <!-- AddedBy Column -->
         <ng-container matColumnDef="AddedBy">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header  sortActionDescription="Sort by pseudoname"> Added By </th>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header  sortActionDescription="Sort by pseudoname" style="width: 5%"> Added By </th>
           <td mat-cell *matCellDef="let element">
-            <span class="user-info" (click)="goToUserInfo(element.addedby)" > {{element.pseudoname}}  </span>
+            <span class="user-info" (click)="goToUserInfo(element.addedby)" style="width: 5%"> {{element.pseudoname}}  </span>
           </td>
         </ng-container>
 
         <!-- AddedOn Column -->
         <ng-container matColumnDef="AddedOn">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by createddate"> Added On </th>
-          <td mat-cell *matCellDef="let element"> {{element.createddate | date:'yyyy-MM-dd'}} </td>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by createddate" style="width: 8%"> Added On </th>
+          <td mat-cell *matCellDef="let element" style="width: 8%"> {{element.createddate | date:'MM-dd-yyyy'}} </td>
         </ng-container>
 
         <!-- LastUpdated Column -->
         <ng-container matColumnDef="LastUpdated">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header  sortActionDescription="Sort by updateddate"> Last
+          <th mat-header-cell *matHeaderCellDef mat-sort-header  sortActionDescription="Sort by updateddate" style="width: 8%"> Last
             Updated </th>
-          <td mat-cell *matCellDef="let element"> {{element.updateddate  | date:'yyyy-MM-dd'}} </td>
+          <td mat-cell *matCellDef="let element" style="width: 8%"> {{element.updateddate  | date:'MM-dd-yyyy'}} </td>
         </ng-container>
 
         <!-- Status Column -->
@@ -119,8 +119,8 @@
 
         <!-- Action Column -->
         <ng-container matColumnDef="Action">
-          <th mat-header-cell *matHeaderCellDef> Action </th>
-          <td mat-cell *matCellDef="let vendor">
+          <th mat-header-cell *matHeaderCellDef style="width: 5%"> Action </th>
+          <td mat-cell *matCellDef="let vendor" style="width: 5%">
             <span class="action-buttons">
               <button [disabled]="!privilegeServ.hasPrivilege('EDIT_VENDOR')" mat-icon-button
                 (click)="editVendor(vendor)" class="action-button-ed">
@@ -136,9 +136,9 @@
 
         <!-- Approve/Reject Column -->
         <ng-container matColumnDef="ApproveOrReject">
-          <th mat-header-cell *matHeaderCellDef  sortActionDescription="Sort by ApproveOrReject">
+          <th mat-header-cell *matHeaderCellDef  sortActionDescription="Sort by ApproveOrReject" style="width: 20%">
             Approve/Reject </th>
-          <td mat-cell *matCellDef="let vendor" class="approve-buttons">
+          <td mat-cell *matCellDef="let vendor" class="approve-buttons" style="width: 20%">
             <ng-container *ngIf="['Approved'].includes(vendor.vms_stat);  else ifNotApproved">
               <button [disabled]="!privilegeServ.hasPrivilege('STATUS_VENDOR')" mat-raised-button
                 class="approve-reject-buttons" (click)="onApproveOrRejectVMS(vendor)" style="width: 75px; height: 25px;"
