--- a/src/app/usit/components/tech-support-list/tech-support-list.component.html
+++ b/src/app/usit/components/tech-support-list/tech-support-list.component.html
@@ -16,7 +16,7 @@
   
         <div class="search-employee">
   
-          <input matInput type="search" class="search" placeholder="search " (keyup)="onFilter($event)">
+          <input matInput type="search" class="search" placeholder="search " (keyup)="applyFilter($event)">
         </div>
       </div>
     </div>
@@ -34,7 +34,7 @@
   
           <!-- Name Column -->
           <ng-container matColumnDef="Name">
-            <th mat-header-cell *matHeaderCellDef  sortActionDescription="Sort by Name"> Name </th>
+            <th mat-header-cell *matHeaderCellDef  mat-sort-header sortActionDescription="Sort by Name"> Name </th>
             <td mat-cell *matCellDef="let element">
               <span class="user-info" (click)="goToUserInfo(element.userid)">
                 {{element.name | titlecase}}
@@ -53,21 +53,21 @@
   
           <!-- Email Column -->
           <ng-container matColumnDef="Experience">
-            <th mat-header-cell *matHeaderCellDef  sortActionDescription="Sort by Experience"> Exp
+            <th mat-header-cell *matHeaderCellDef  mat-sort-header sortActionDescription="Sort by Experience"> Exp
             </th>
             <td mat-cell *matCellDef="let element"> {{element.experience}} </td>
           </ng-container>
   
           <!-- Personal/Comp Number Column -->
           <ng-container matColumnDef="Technology">
-            <th mat-header-cell *matHeaderCellDef  sortActionDescription="Sort by Technology">
+            <th mat-header-cell *matHeaderCellDef  mat-sort-header sortActionDescription="Sort by Technology">
               Technology </th>
             <td mat-cell *matCellDef="let element"> {{element.technology|titlecase}} </td>
           </ng-container>
   
           <!-- Designation Column -->
           <ng-container matColumnDef="Skills">
-            <th mat-header-cell *matHeaderCellDef  sortActionDescription="Sort by Skills" style="width: 35%;">Skills
+            <th mat-header-cell *matHeaderCellDef  mat-sort-header sortActionDescription="Sort by Skills" style="width: 35%;">Skills
             </th>
             <td mat-cell *matCellDef="let element"  style="width: 35%;"> 
               <div class="truncate-multiline" [matTooltip]="element.skills | titlecase" matTooltipClass="custom-tooltip">{{element.skills | titlecase}}</div>
@@ -76,14 +76,14 @@
   
           <!-- Department Column -->
           <ng-container matColumnDef="Email">
-            <th mat-header-cell *matHeaderCellDef sortActionDescription="Sort by Department"> Email
+            <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Department"> Email
             </th>
             <td mat-cell *matCellDef="let element"> {{element.email}} </td>
           </ng-container>
   
           <ng-container matColumnDef="ContactNumber">
-            <th mat-header-cell *matHeaderCellDef sortActionDescription="Sort by ContactNumber">
-              ContactNumber </th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by ContactNumber">
+              Contact Number </th>
             <td mat-cell *matCellDef="let element">
               <span *ngIf="element.mobile != null">{{element.mobile}}</span>
               <br>
@@ -119,9 +119,8 @@
 
     <div class="paginator">
       <!-- paginator -->
-      <mat-paginator (page)="handlePageEvent($event)" [length]="totalItems" [pageSize]="pageSize" [disabled]="false"
-        [showFirstLastButtons]="showFirstLastButtons" [pageSizeOptions]="showPageSizeOptions ? pageSizeOptions : []"
-        [hidePageSize]="hidePageSize" [pageIndex]="currentPageIndex" aria-label="Select page">
+      <mat-paginator (page)="handlePageEvent($event)" [length]="totalItems" [pageSize]="pageSize" [disabled]="false" [showFirstLastButtons]="showFirstLastButtons"
+        [pageSizeOptions]="showPageSizeOptions ? pageSizeOptions : []" [hidePageSize]="true" [pageIndex]="currentPageIndex" aria-label="Select page">
       </mat-paginator>
     </div>
   
