--- a/src/app/usit/components/masters/qualification-list/qualification-list.component.html
+++ b/src/app/usit/components/masters/qualification-list/qualification-list.component.html
@@ -15,7 +15,7 @@
 
       <div class="search-qualification" >
         <input matInput type="search"  class="search" placeholder="search qualification"
-        (keyup)="onFilter($event)"  >
+        (keyup)="applyFilter($event)"  >
       </div>
   </div>
   </div>
@@ -58,12 +58,11 @@
     </section>
     <hr>
   </div>
+
   <div class="paginator">
     <!-- paginator -->
-  <mat-paginator #paginator [length]="dataSource.data.length" (page)="handlePageEvent($event)" [length]="length"
-  [pageSize]="pageSize" [disabled]="false" [showFirstLastButtons]="showFirstLastButtons"
-  [pageSizeOptions]="showPageSizeOptions ? pageSizeOptions : []" [hidePageSize]="hidePageSize"
-  [pageIndex]="pageIndex" aria-label="Select page">
-</mat-paginator>
+    <mat-paginator (page)="handlePageEvent($event)" [length]="totalItems" [pageSize]="pageSize" [disabled]="false" [showFirstLastButtons]="showFirstLastButtons"
+      [pageSizeOptions]="showPageSizeOptions ? pageSizeOptions : []" [hidePageSize]="true" [pageIndex]="currentPageIndex" aria-label="Select page">
+    </mat-paginator>
   </div>
   </div>
