--- a/src/app/usit/components/masters/companies-list/companies-list.component.html
+++ b/src/app/usit/components/masters/companies-list/companies-list.component.html
@@ -16,7 +16,7 @@
       <div class="search-company" >
         <!-- <mat-icon class="item-icon">person_search</mat-icon> -->
         <input matInput type="search"  class="search" placeholder="search company"
-        (keyup)="onFilter($event)"  >
+        (keyup)="applyFilter($event)"  >
       </div>
   </div>
   </div>
@@ -60,10 +60,10 @@
   </div>
   <div class="paginator">
     <!-- paginator -->
-    <mat-paginator #paginator [length]="dataSource.data.length" (page)="handlePageEvent($event)" [length]="length"
-    [pageSize]="pageSize" [disabled]="false" [showFirstLastButtons]="showFirstLastButtons"
-    [pageSizeOptions]="showPageSizeOptions ? pageSizeOptions : []" [hidePageSize]="hidePageSize"
-    [pageIndex]="pageIndex" aria-label="Select page">
-  </mat-paginator>
+    <mat-paginator (page)="handlePageEvent($event)" [length]="totalItems" [pageSize]="pageSize" [disabled]="false"
+      [showFirstLastButtons]="showFirstLastButtons" [pageSizeOptions]="showPageSizeOptions ? pageSizeOptions : []"
+      [hidePageSize]="true" [pageIndex]="currentPageIndex" aria-label="Select page">
+    </mat-paginator>
+  
   </div>
 </div>
