--- a/src/app/usit/components/masters/visa-list/visa-list.component.html
+++ b/src/app/usit/components/masters/visa-list/visa-list.component.html
@@ -1,27 +1,27 @@
 <div class="container">
-    <ul class="breadcrumb">
-      <li><a (click)="navigateToDashboard()">Home</a></li>
-      <li class="last">Masters</li>
-      <li class="last">Visa</li>
-    </ul>
-  <div class="visa-header-container mat-elevation-z1" >
+  <ul class="breadcrumb">
+    <li><a (click)="navigateToDashboard()">Home</a></li>
+    <li class="last">Masters</li>
+    <li class="last">Visa</li>
+  </ul>
+  <div class="visa-header-container mat-elevation-z1">
     <span class="header-text">
       Visa List
     </span>
     <div class="visa-actions">
-      <button [disabled]="!privilegeServ.hasPrivilege('ADD_VISA')" mat-icon-button class="add-user" (click)="addVisa()" matTooltip="Add Visa" matTooltipPosition="left">
+      <button [disabled]="!privilegeServ.hasPrivilege('ADD_VISA')" mat-icon-button class="add-user" (click)="addVisa()"
+        matTooltip="Add Visa" matTooltipPosition="left">
         <mat-icon [ngClass]="{'item-icon': privilegeServ.hasPrivilege('ADD_VISA')}">add_circle</mat-icon>
       </button>
 
-      <div class="search-visa" >
-        <input matInput type="search"  class="search" placeholder="search visa"
-        (keyup)="onFilter($event)"  >
+      <div class="search-visa">
+        <input matInput type="search" class="search" placeholder="search visa" (keyup)="applyFilter($event)">
       </div>
-  </div>
+    </div>
   </div>
   <div class="table-wrapper">
     <section class="table-style mat-elevation-z8">
-      <table mat-table [dataSource]="dataSource" matSort  (matSortChange)="onSort($event)">
+      <table mat-table [dataSource]="dataSource" matSort (matSortChange)="onSort($event)">
 
         <!--- Note that these columns can be defined in any order.
               The actual rendered columns are set as a property on the row definition" -->
@@ -34,19 +34,22 @@
 
         <!-- Name Column -->
         <ng-container matColumnDef="VisaStatus">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by VisaStatus"> Visa Status </th>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by VisaStatus"> Visa Status
+          </th>
           <td mat-cell *matCellDef="let element"> {{element.visastatus}} </td>
         </ng-container>
 
-          <!-- actions -->
+        <!-- actions -->
         <ng-container matColumnDef="Actions" class="actions">
           <th mat-header-cell *matHeaderCellDef> Action </th>
           <td mat-cell *matCellDef="let visa" class="action-buttons">
-            <button  [disabled]="!privilegeServ.hasPrivilege('EDIT_VISA')" mat-icon-button (click)="editVisa(visa)" class="action-button-ed">
+            <button [disabled]="!privilegeServ.hasPrivilege('EDIT_VISA')" mat-icon-button (click)="editVisa(visa)"
+              class="action-button-ed">
               <mat-icon [ngClass]="{'edit-icon': privilegeServ.hasPrivilege('EDIT_VISA')}">edit</mat-icon>
             </button>
 
-            <button  [disabled]="!privilegeServ.hasPrivilege('DELETE_VISA')" mat-icon-button (click)="deleteVisa(visa)" class="action-button-ed">
+            <button [disabled]="!privilegeServ.hasPrivilege('DELETE_VISA')" mat-icon-button (click)="deleteVisa(visa)"
+              class="action-button-ed">
               <mat-icon [ngClass]="{'delete-icon': privilegeServ.hasPrivilege('DELETE_VISA')}">delete</mat-icon>
             </button>
           </td>
@@ -59,12 +62,11 @@
     <hr>
   </div>
 
-   <!-- paginator -->
   <div class="paginator">
-    <mat-paginator #paginator [length]="dataSource.data.length" (page)="handlePageEvent($event)" [length]="length"
-      [pageSize]="pageSize" [disabled]="false" [showFirstLastButtons]="showFirstLastButtons"
-      [pageSizeOptions]="showPageSizeOptions ? pageSizeOptions : []" [hidePageSize]="hidePageSize" [pageIndex]="pageIndex"
-      aria-label="Select page">
+    <!-- paginator -->
+    <mat-paginator (page)="handlePageEvent($event)" [length]="totalItems" [pageSize]="pageSize" [disabled]="false"
+      [showFirstLastButtons]="showFirstLastButtons" [pageSizeOptions]="showPageSizeOptions ? pageSizeOptions : []"
+      [hidePageSize]="true" [pageIndex]="currentPageIndex" aria-label="Select page">
     </mat-paginator>
   </div>
-  </div>
+</div>
