--- a/src/app/usit/components/reports/banter-report/banter-report.component.html
+++ b/src/app/usit/components/reports/banter-report/banter-report.component.html
@@ -61,10 +61,14 @@
                 >Department is required</mat-error
               >
             </mat-form-field>
-  
+
             <button mat-raised-button color="primary">Submit</button>&nbsp;
             <button mat-raised-button color="warn" (click)="reset()">Reset</button
             >&nbsp;
+
+            <button *ngIf="showReport" mat-raised-button style="background-color: #4CAF50; color: white;"
+            (click)="excelImport()">Excel Export</button>
+            &nbsp;&nbsp;
           </mat-card-content>
         </mat-card>
       </form>
